<?xml version="1.0"?>
<package format="2">
  <name>imp_blender_renderer</name>
  <version>0.0.0</version>
  <description>Implementation of rendering engine based on Blender.</description>

  <maintainer email="wengfei@u.nus.edu">Weng Fei Low</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>esim_common</depend>
  <depend>esim_rendering</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>

</package>
